@@ -29,6 +29,7 @@ Version 0.4.0 - ??
 - [new] Added a WFPagedPropelModelCriteria to add phocoa pagination support for Propel 1.5's new query infrastructure.
 - [new] Added WFAuthorizationInfo->loginAsAuthorizationInfo($authInfo) function to make it easy to implement SSO or user-switching functionality.
 - [new] Add this() function to WFObject to make it easier to use KVC magic on "current" object.
+- [new] Add a smarty modifier plugin to json encode data.
 
 Version 0.3.9 - 10/21/2010
 - [new] Add WFRequestController->isMobileBrowser()
